syntax="proto3";
package pb;
option go_package="./proto";

message LoginRequest{
    string username=1;
    string password=2;
}
message LoginResponse{
    string username=1;
}

